unpackaged/main/default/objects/ServiceTerritory/fields/FSLDemoTools_Original_Geolocation__c.field-meta.xml
<CustomField>
    <fullName>FSLDemoTools_Original_Geolocation__c</fullName>
    <label>FSLDemoTools Original Geolocation</label>
    <scale>6</scale>
    <type>Location</type>
</CustomField>