unpackaged/main/default/objects/ServiceTerritory/fields/FSLDemoTools_Original_Timezone__c.field-meta.xml
<CustomField>
    <fullName>FSLDemoTools_Original_Timezone__c</fullName>
    <label>FSLDemoTools Original Timezone</label>
    <length>100</length>
    <type>Text</type>
</CustomField>