unpackaged/main/default/objects/ServiceTerritory/validationRules/FSLDemoTools_Fields.validationRule-meta.xml
<ValidationRule>
    <fullName>FSLDemoTools_Fields</fullName>
    <active>false</active>
    <errorConditionFormula>OR( ISCHANGED(  FSLDemoTools_Original_Geolocation__Latitude__s  ),ISCHANGED(   FSLDemoTools_Original_Geolocation__Longitude__s   )   , ISCHANGED(  FSLDemoTools_Original_Name__c  )  , ISCHANGED(  FSLDemoTools_Original_Timezone__c  )  )</errorConditionFormula>
    <errorMessage>You can&#39;t edit the FSLDemoTools Master data fields</errorMessage>
</ValidationRule>