unpackaged/main/default/objects/ServiceTerritory/listViews/Workforce_Engagement_Territories.listView-meta.xml
<ListView>
    <fullName>Workforce_Engagement_Territories</fullName>
    <columns>Name</columns>
    <columns>LAST_UPDATE</columns>
    <columns>LastModifiedBy</columns>
    <columns>ParentTerritory</columns>
    <columns>OperatingHours</columns>
    <columns>IsActive</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OperatingHours</field>
        <operation>contains</operation>
        <value>Workforce</value>
    </filters>
    <label>Workforce Engagement Territories</label>
</ListView>